# lp1-projeto2

./: .clang-format  .clang-format.yaml  .clang-tidy  .clang-tidy.yaml  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  musics.txt
.reuse/: dep5
include/: file.h  interface.h  linked_list.h  music.h  node.h  playlist.h
src/: file.cpp  interface.cpp  linked_list.cpp  main.cpp  music.cpp  playlist.cpp
